# UDPServer_test_assignment

./: .gitignore  README.md  testMultiClients.py
Common/: Networking.cpp  Networking.h  Protocol.h  Utils.h
UDPClient/: CMakeLists.txt  ClientConfig.cpp  ClientConfig.h  main.cpp
UDPServer/: CMakeLists.txt  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  main.cpp
